how do i make it stop announcing this

--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -29867,9 +29867,9 @@
  ADG_fascism:0 "Empire of Kel Adagh"
  ADG_fascism_DEF:0 "Empire of Kel Adagh"
  ADG_fascism_ADJ:0 "Adaghi"
- ADG_anarchism_ideology:0 "Adaghi Tribes"
- ADG_anarchism_ideology_DEF:0 "Adaghi Tribes"
- ADG_anarchism_ideology_ADJ:0 "Adaghi"
+ ADG_anarchism_ideology:0 "Awbari Alliance"
+ ADG_anarchism_ideology_DEF:0 "Awbari Alliance"
+ ADG_anarchism_ideology_ADJ:0 "Awbari"
  ADG_socialism_ideology:0 "Socialist Republic of Kel Adagh"
  ADG_socialism_ideology_DEF:0 "Socialist Republic of Kel Adagh"
  ADG_socialism_ideology_ADJ:0 "Adaghi"
@@ -29934,9 +29934,9 @@
  AJJ_fascism:0 "Empire of Kel Ajjer"
  AJJ_fascism_DEF:0 "Empire of Kel Ajjer"
  AJJ_fascism_ADJ:0 "Ajjeri"
- AJJ_anarchism_ideology:0 "Ajjeri Tribes"
- AJJ_anarchism_ideology_DEF:0 "Ajjeri Tribes"
- AJJ_anarchism_ideology_ADJ:0 "Ajjeri"
+ AJJ_anarchism_ideology:0 "Al'Uqubri Alliance"
+ AJJ_anarchism_ideology_DEF:0 "The Al'Uqubri Alliance"
+ AJJ_anarchism_ideology_ADJ:0 "Al'Uqubri"
  AJJ_socialism_ideology:0 "Socialist Republic of Kel Ajjer"
  AJJ_socialism_ideology_DEF:0 "Socialist Republic of Kel Ajjer"
  AJJ_socialism_ideology_ADJ:0 "Ajjeri"
@@ -32309,9 +32309,9 @@
  KLO_fascism:0 "Empire of Kel Owey"
  KLO_fascism_DEF:0 "Empire of Kel Owey"
  KLO_fascism_ADJ:0 "Kel Oweyan"
- KLO_anarchism_ideology:0 "Kel Oweyan Tribes"
- KLO_anarchism_ideology_DEF:0 "Kel Oweyan Tribes"
- KLO_anarchism_ideology_ADJ:0 "Kel Oweyan"
+ KLO_anarchism_ideology:0 "Sbah Alliance"
+ KLO_anarchism_ideology_DEF:0 "Sbah Alliance"
+ KLO_anarchism_ideology_ADJ:0 "Sbah"
  KLO_socialism_ideology:0 "Socialist Republic of Kel Owey"
  KLO_socialism_ideology_DEF:0 "Socialist Republic of Kel Owey"
  KLO_socialism_ideology_ADJ:0 "Kel Oweyan"
@@ -32376,9 +32376,9 @@
  KLT_fascism:0 "Empire of Kel Ataram"
  KLT_fascism_DEF:0 "Empire of Kel Ataram"
  KLT_fascism_ADJ:0 "Kel Ataraman"
- KLT_anarchism_ideology:0 "Kel Ataraman Tribes"
- KLT_anarchism_ideology_DEF:0 "Kel Ataraman Tribes"
- KLT_anarchism_ideology_ADJ:0 "Kel Ataraman"
+ KLT_anarchism_ideology:0 "Tlemcen Alliance"
+ KLT_anarchism_ideology_DEF:0 "Tlemcen Alliance"
+ KLT_anarchism_ideology_ADJ:0 "Tlemcen"
  KLT_socialism_ideology:0 "Socialist Republic of Kel Ataram"
  KLT_socialism_ideology_DEF:0 "Socialist Republic of Kel Ataram"
  KLT_socialism_ideology_ADJ:0 "Kel Ataraman"
