--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -14454,9 +14454,9 @@
  ALY_fascism:0 "State of Awlad Sidi Shaykh"
  ALY_fascism_DEF:0 "State of Awlad Sidi Shaykh"
  ALY_fascism_ADJ:0 "Awlad Sidi Shaykh"
- ALY_anarchism_ideology:0 "Awlad Sidi Shaykh Confederation"
- ALY_anarchism_ideology_DEF:0 "The Awlad Sidi Shaykh Confederation"
- ALY_anarchism_ideology_ADJ:0 "Awlad Sidi Shaykh"
+ ALY_anarchism_ideology:0 "Jakharrad Confederation"
+ ALY_anarchism_ideology_DEF:0 "The Jakharrad Confederation"
+ ALY_anarchism_ideology_ADJ:0 "Jakharrad"
  ALY_socialism_ideology:0 "Socialist Republic of Awlad Sidi Shaykh"
  ALY_socialism_ideology_DEF:0 "Socialist Republic of Awlad Sidi Shaykh"
  ALY_socialism_ideology_ADJ:0 "Awlad Sidi Shaykh"
@@ -14588,9 +14588,9 @@
  MZA_fascism:0 "State of Mzab"
  MZA_fascism_DEF:0 "State of Mzab"
  MZA_fascism_ADJ:0 "Mzabian"
- MZA_anarchism_ideology:0 "Tribal Mzab"
- MZA_anarchism_ideology_DEF:0 "Tribal Mzab"
- MZA_anarchism_ideology_ADJ:0 "Mzabian"
+ MZA_anarchism_ideology:0 "Siwa Alliance"
+ MZA_anarchism_ideology_DEF:0 "The Siwa Alliance"
+ MZA_anarchism_ideology_ADJ:0 "Siwa"
  MZA_socialism_ideology:0 "Socialist Republic of Mzab"
  MZA_socialism_ideology_DEF:0 "Socialist Republic of Mzab"
  MZA_socialism_ideology_ADJ:0 "Mzabian"
