--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -20340,9 +20340,9 @@
  FIU_theocratic_DEF:0 "The Italian Regency of Carnaro and Upper Dalmatia"
  FIU_ADJ:0 "Fiume"
 
- FZN_anarchism_ideology:0 "Toubou Tribes"
- FZN_anarchism_ideology_DEF:0 "The Toubou Tribes"
- FZN_anarchism_ideology_ADJ:0 "Toubou"
+ FZN_anarchism_ideology:0 "Sabha Confederation"
+ FZN_anarchism_ideology_DEF:0 "The Sabha Confederation"
+ FZN_anarchism_ideology_ADJ:0 "Sabhan"
  FZN_communism:0 "People's Republic of Fezzan"
  FZN_communism_DEF:0 "The People's Republic of Fezzan"
  FZN_communism_ADJ:0 "Fezzani"
@@ -20587,9 +20587,9 @@
  CPV_anarchism_ideology_DEF:0 "The Makololo Tribes"
  CPV_anarchism_ideology_ADJ:0 "Makololo"
  
- AGD_anarchism_ideology:0 "Daza Tribes"
- AGD_anarchism_ideology_DEF:0 "The Daza Tribes"
- AGD_anarchism_ideology_ADJ:0 "Daza"
+ AGD_anarchism_ideology:0 "Gazbandir Alliance"
+ AGD_anarchism_ideology_DEF:0 "The Gazbandir Alliance"
+ AGD_anarchism_ideology_ADJ:0 "Gazbandir"
  AGD_democratic:0 "Republic of Agadez"
  AGD_democratic_DEF:0 "The Republic of Agadez"
  AGD_democratic_ADJ:0 "Agadezi"
@@ -26937,9 +26937,9 @@
  INI_fascism_DEF:0 "The Ininian State"
  INI_fascism_ADJ:0 "Ininian"
 
- SGR_anarchism_ideology:0 "Tuareg Tribes"
- SGR_anarchism_ideology_DEF:0 "The Tuareg Tribes"
- SGR_anarchism_ideology_ADJ:0 "Tuareg"
+ SGR_anarchism_ideology:0 "Tindouf Alliance"
+ SGR_anarchism_ideology_DEF:0 "The Tindouf Alliance"
+ SGR_anarchism_ideology_ADJ:0 "Tindoufi"
  SGR_communism:0 "People's Republic of South Algeria"
  SGR_communism_DEF:0 "The People's Republic of South Algeria"
  SGR_communism_ADJ:0 "South Algerian"
