--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -21163,9 +21163,9 @@
  DGI_conservative_monarchism:0 "Federal Kingdom of Dar Qimr"
  DGI_conservative_monarchism_DEF:0 "Federal Kingdom of Dar Qimr"
  DGI_conservative_monarchism_ADJ:0 "Dar Qimri"
- DGI_stratocratic:0 "Dar Qimri Military Junta"
- DGI_stratocratic_DEF:0 "Dar Qimri Military Junta"
- DGI_stratocratic_ADJ:0 "Dar Qimri"
+ DGI_stratocratic:0 "Kel Algedir Confederation"
+ DGI_stratocratic_DEF:0 "The Kel Algedir Confederation"
+ DGI_stratocratic_ADJ:0 "Kel Algedir"
  DGI_authoritarian_monarchism:0 "Dar Qimri Kingdom"
  DGI_authoritarian_monarchism_DEF:0 "Dar Qimri Kingdom"
  DGI_authoritarian_monarchism_ADJ:0 "Dar Qimri"
@@ -30013,9 +30013,9 @@
  AYR_conservative_monarchism:0 "Federal Kingdom of Kel Ayr"
  AYR_conservative_monarchism_DEF:0 "Federal Kingdom of Kel Ayr"
  AYR_conservative_monarchism_ADJ:0 "Ayri"
- AYR_stratocratic:0 "Ayri Military Junta"
- AYR_stratocratic_DEF:0 "Ayri Military Junta"
- AYR_stratocratic_ADJ:0 "Ayri"
+ AYR_stratocratic:0 "Azaduin Alliance"
+ AYR_stratocratic_DEF:0 "The Azaduin Alliance"
+ AYR_stratocratic_ADJ:0 "Azaduin"
  AYR_authoritarian_monarchism:0 "Kel Ayr Confederation"
  AYR_authoritarian_monarchism_DEF:0 "The Kel Ayr Confederation"
  AYR_authoritarian_monarchism_ADJ:0 "Ayri"
@@ -36542,9 +36542,9 @@
  TKT_conservative_monarchism:0 "Federal Kingdom of Tekrikrit"
  TKT_conservative_monarchism_DEF:0 "Federal Kingdom of Tekrikrit"
  TKT_conservative_monarchism_ADJ:0 "Tekrikriti"
- TKT_stratocratic:0 "Tekrikriti Military Junta"
- TKT_stratocratic_DEF:0 "Tekrikriti Military Junta"
- TKT_stratocratic_ADJ:0 "Tekrikriti"
+ TKT_stratocratic:0 "Ansongo-Menaka-Asama Confederation"
+ TKT_stratocratic_DEF:0 "The Ansongo-Menaka-Asama Confederation"
+ TKT_stratocratic_ADJ:0 "Anmenas"
  TKT_authoritarian_monarchism:0 "Tekrikriti Kingdom"
  TKT_authoritarian_monarchism_DEF:0 "Tekrikriti Kingdom"
  TKT_authoritarian_monarchism_ADJ:0 "Tekrikriti"
