--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -15538,9 +15538,9 @@
  TGT_conservative_monarchism:0 "Federal Kingdom of Tagant"
  TGT_conservative_monarchism_DEF:0 "Federal Kingdom of Tagant"
  TGT_conservative_monarchism_ADJ:0 "Taganti"
- TGT_stratocratic:0 "Taganti Military Junta"
- TGT_stratocratic_DEF:0 "Taganti Military Junta"
- TGT_stratocratic_ADJ:0 "Taganti"
+ TGT_stratocratic:0 "Tichit Confederation"
+ TGT_stratocratic_DEF:0 "The Tichit Confederation"
+ TGT_stratocratic_ADJ:0 "Tichit"
  TGT_authoritarian_monarchism:0 "Emirate of Tagant"
  TGT_authoritarian_monarchism_DEF:0 "The Emirate of Tagant"
  TGT_authoritarian_monarchism_ADJ:0 "Taganti"
@@ -15806,9 +15806,9 @@
  DGR_conservative_monarchism:0 "Federal Kingdom of Damagaram"
  DGR_conservative_monarchism_DEF:0 "Federal Kingdom of Damagaram"
  DGR_conservative_monarchism_ADJ:0 "Damagarami"
- DGR_stratocratic:0 "Damagarami Military Junta"
- DGR_stratocratic_DEF:0 "Damagarami Military Junta"
- DGR_stratocratic_ADJ:0 "Damagarami"
+ DGR_stratocratic:0 "Bardat-Faqur Alliance"
+ DGR_stratocratic_DEF:0 "The Bardat-Faqur Alliance"
+ DGR_stratocratic_ADJ:0 "Bardat-Faqur"
  DGR_authoritarian_monarchism:0 "Kingdom of Damagaram"
  DGR_authoritarian_monarchism_DEF:0 "Kingdom of Damagaram"
  DGR_authoritarian_monarchism_ADJ:0 "Damagarami"
