--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -20555,8 +20555,8 @@
  AZW_fascism:0 "Azawadi Empire"
  AZW_fascism_DEF:0 "The Azawadi Empire"
  AZW_fascism_ADJ:0 "Azawadi"
- AZW_stratocratic:0 "Coordination of Azawad Movements"
- AZW_stratocratic_DEF:0 "The Coordination of Azawad Movements"
+ AZW_stratocratic:0 "Confederation of Azawad"
+ AZW_stratocratic_DEF:0 "The Confederation of Azawad"
  AZW_stratocratic_ADJ:0 "Azawadi"
  AZW_neutrality:0 "State of Azawad"
  AZW_neutrality_DEF:0 "The State of Azawad"
