--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2708,8 +2708,8 @@
  FRA_democratic_DEF:0 "The Federal Republic of France"
  FRA_conservative_monarchism:0 "Second French Empire"
  FRA_conservative_monarchism_DEF:0 "The Second French Empire"
- FRA_anocratic_republic:0 "State of Francia"
- FRA_anocratic_republic_DEF:0 "The State of Francia"
+ FRA_anocratic_republic:0 "Free and Federal State of France in Africa"
+ FRA_anocratic_republic_DEF:0 "The Free and Federal State of France in Africa"
  FRA_anocratic_monarchism:0 "French Empire"
  FRA_anocratic_monarchism_DEF:0 "The French Empire"
  FRA_neutrality:0 "Free France"
@@ -6650,8 +6650,8 @@
  MRT_fascism_DEF:0 "The Italian Protectorate of Mauritania"
  MRT_theocratic:0 "Islamic Republic of Mauritania"
  MRT_theocratic_DEF:0 "The Islamic Republic of Mauritania"
- MRT_neutrality:0 "Colony of Mauritania"
- MRT_neutrality_DEF:0 "The Colony of Mauritania"
+ MRT_neutrality:0 "Territory of Mauritania"
+ MRT_neutrality_DEF:0 "The Territory of Mauritania"
  MRT_authoritarian_monarchism:0 "Protectorate of Mauritania"
  MRT_authoritarian_monarchism_DEF:0 "The Protectorate of Mauritania"
  MRT_anocratic_republic:0 "Mauritania"
@@ -6882,8 +6882,8 @@
  MLI_democratic_DEF:0 "The Republic of Mali"
  MLI_stratocratic:0 "Republic of Mali"
  MLI_stratocratic_DEF:0 "The Republic of Mali"
- MLI_neutrality:0 "Colony of the French Sudan"
- MLI_neutrality_DEF:0 "The Colony of the French Sudan"
+ MLI_neutrality:0 "Territory of the Upper Niger"
+ MLI_neutrality_DEF:0 "The Territory of the Upper Niger"
  MLI_communism:0 "Malian Socialist Republic"
  MLI_communism_DEF:0 "The Malian Socialist Republic"
  MLI_liberal_republic:0 "Mali Federation"
@@ -7131,8 +7131,8 @@
  CHA_democratic_DEF:0 "The Republic of Chad"
  CHA_stratocratic:0 "Republic of Chad"
  CHA_stratocratic_DEF:0 "The Republic of Chad"
- CHA_neutrality:0 "Colony of Chad"
- CHA_neutrality_DEF:0 "The Colony of Chad"
+ CHA_neutrality:0 "Territory of Tchad and the Central Sahara"
+ CHA_neutrality_DEF:0 "The Territory of Tchad and the Central Sahara"
  CHA_communism:0 "People's Republic of Tchad"
  CHA_communism_DEF:0 "The People's Republic of Tchad"
  CHA_monarchism:0 "Bornu Empire"
@@ -11206,8 +11206,8 @@
  RCG_authoritarian_monarchism_DEF:0 "The Congo Colony"
  RCG_stratocratic_monarchism:0 "Colony of German Congo"
  RCG_stratocratic_monarchism_DEF:0 "The Colony of German Congo"
- RCG_neutrality:0 "Colony of the Middle Congo"
- RCG_neutrality_DEF:0 "The Colony of the Middle Congo"
+ RCG_neutrality:0 "Territory of Gabon, Brazzaville, and the Western Kongo"
+ RCG_neutrality_DEF:0 "The Territory of Gabon, Brazzaville, and the Western Kongo"
  RCG_stratocratic:0 "Colony of French Congo"
  RCG_stratocratic_DEF:0 "The Colony of French Congo"
  RCG_centrist_monarchism:0 "Congo-Brazzaville"
@@ -11238,8 +11238,8 @@
  CAR_centrist_monarchism_DEF:0 "The Empire of Ubangi-Shari"
  CAR_democratic:0 "Central African Republic"
  CAR_democratic_DEF:0 "The Central African Republic"
- CAR_neutrality:0 "Colony of Ubangi-Shari"
- CAR_neutrality_DEF:0 "The Colony of Ubangi-Shari"
+ CAR_neutrality:0 "Territory of North Cameroun and Ubangi-Shari"
+ CAR_neutrality_DEF:0 "The Territory of North Cameroun and Ubangi-Shari"
  CAR_authoritarian_monarchism:0 "Colony of Ubangi-Shari"
  CAR_authoritarian_monarchism_DEF:0 "The Colony of Ubangi-Shari"
  CAR_stratocratic:0 "State of Ubangi-Shari"
@@ -12359,8 +12359,8 @@
  DAH_fascism_DEF:0 "The National Socialist State of Dahomey"
  DAH_democratic:0 "Republic of Benin"
  DAH_democratic_DEF:0 "The Republic of Benin"
- DAH_neutrality:0 "Colony of Dahomey and Dependencies"
- DAH_neutrality_DEF:0 "The Colony of Dahomey and Dependencies"
+ DAH_neutrality:0 "Territory of Dahomey"
+ DAH_neutrality_DEF:0 "The Territory of Dahomey"
  DAH_authoritarian_monarchism:0 "Colony of Dahomey"
  DAH_authoritarian_monarchism_DEF:0 "The Colony of Dahomey"
  DAH_communism:0 "Democratic People's Republic of Dahomey"
@@ -12404,8 +12404,8 @@
  VOL_stratocratic:0 "Republic of Burkina Faso"
  VOL_stratocratic_DEF:0 "The Republic of Burkina Faso"
  VOL_stratocratic_ADJ:0 "Burkinabè"
- VOL_neutrality:0 "Colony of Upper Volta"
- VOL_neutrality_DEF:0 "The Colony of Upper Volta"
+ VOL_neutrality:0 "Territory of the Upper Volta"
+ VOL_neutrality_DEF:0 "The Territory of the Upper Volta"
  VOL_communism:0 "Socialist Republic of the Upper Volta"
  VOL_communism_DEF:0 "The Socialist Republic of Upper Volta"
  VOL_fascism_ADJ:0 "Upper Voltese"
@@ -12436,8 +12436,8 @@
  IVO_fascism_DEF:0 "The Kong Empire"
  IVO_liberal_republic:0 "République de Côte d'Ivoire"
  IVO_liberal_republic_DEF:0 "La République de Côte d'Ivoire"
- IVO_neutrality:0 "Colony of the Ivory Coast"
- IVO_neutrality_DEF:0 "Colony of the Ivory Coast"
+ IVO_neutrality:0 "Territory of the Ivory Coast"
+ IVO_neutrality_DEF:0 "The Territory of the Ivory Coast"
  IVO_democratic:0 "Republic of Côte d'Ivoire"
  IVO_democratic_DEF:0 "The Republic of Côte d'Ivoire"
  IVO_anocratic_republic:0 "Republic of Côte d'Ivoire"
@@ -12499,8 +12499,8 @@
  GNA_fascism_DEF:0 "State of Guinea"
  GNA_democratic:0 "Republic of Guinea"
  GNA_democratic_DEF:0 "The Republic of Guinea"
- GNA_neutrality:0 "Colony of French Guinea"
- GNA_neutrality_DEF:0 "The Colony of French Guinea"
+ GNA_neutrality:0 "Territory of Guinea-Conakry"
+ GNA_neutrality_DEF:0 "The Territory of Guinea-Conakry"
  GNA_liberal_republic:0 "Guinea"
  GNA_liberal_republic_DEF:0 "Guinea"
  GNA_centrist_republic:0 "Guinea-Conakry"
@@ -12568,8 +12568,8 @@
  NGR_socialism_ideology_DEF:0 "The Nigerien Republic"
  NGR_anocratic_republic:0 "Republic of the Niger"
  NGR_anocratic_republic_DEF:0 "The Republic of the Niger"
- NGR_neutrality:0 "Colony of Niger"
- NGR_neutrality_DEF:0 "The Colony of Niger"
+ NGR_neutrality:0 "Territories of Niamey, Agadez, and Zinder"
+ NGR_neutrality_DEF:0 "The Territories of Niamey, Agadez, and Zinder"
  NGR_authoritarian_monarchism:0 "Protectorate of Upper Nigeria"
  NGR_authoritarian_monarchism_DEF:0 "The Protectorate of Upper Nigeria"
  NGR_communism:0 "Democratic People's Republic of Niger"
@@ -20558,9 +20558,9 @@
  AZW_stratocratic:0 "Confederation of Azawad"
  AZW_stratocratic_DEF:0 "The Confederation of Azawad"
  AZW_stratocratic_ADJ:0 "Azawadi"
- AZW_neutrality:0 "State of Azawad"
- AZW_neutrality_DEF:0 "The State of Azawad"
- AZW_neutrality_ADJ:0 "Azawadi"
+ AZW_neutrality:0 "Territory of Timbuktu"
+ AZW_neutrality_DEF:0 "The Territory of Timbuktu"
+ AZW_neutrality_ADJ:0 "Timbuktu"
  AZW_monarchism:0 "Bamana Empire"
  AZW_monarchism_DEF:0 "The Bamana Empire"
  AZW_monarchism_ADJ:0 "Bamana"
@@ -26956,8 +26956,8 @@
  SGR_democratic_ADJ:0 "South Algerian"
  SGR_anocratic_republic:0 "French Republic"
  SGR_anocratic_republic_DEF:0 "The French Republic"
- SGR_neutrality:0 "Southern Territories of Algeria"
- SGR_neutrality_DEF:0 "The Southern Territories of Algeria"
+ SGR_neutrality:0 "Territory of Inner Algeria"
+ SGR_neutrality_DEF:0 "The Territory of Inner Algeria"
  SGR_neutrality_ADJ:0 "South Algerian"
  SGR_stratocratic:0 "Free French Forces in Africa"
  SGR_stratocratic_DEF:0 "The Free French Forces in Africa"
