--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -30083,9 +30083,9 @@
  GS2_stratocratic:0 "Gresi Military Junta"
  GS2_stratocratic_DEF:0 "Gresi Military Junta"
  GS2_stratocratic_ADJ:0 "Gresi"
- GS2_authoritarian_monarchism:0 "Kel Gres Confederation"
- GS2_authoritarian_monarchism_DEF:0 "The Kel Gres Confederation"
- GS2_authoritarian_monarchism_ADJ:0 "Gresi"
+ GS2_authoritarian_monarchism:0 "Massumi Alliance"
+ GS2_authoritarian_monarchism_DEF:0 "The Massumi Alliance"
+ GS2_authoritarian_monarchism_ADJ:0 "Massumi"
  GS2_republican_fascism:0 "Greater Gresi State"
  GS2_republican_fascism_DEF:0 "Greater Gresi State"
  GS2_republican_fascism_ADJ:0 "Gresi"
@@ -32458,8 +32458,8 @@
  KLN_stratocratic:0 "Kel Dinnikian Military Junta"
  KLN_stratocratic_DEF:0 "Kel Dinnikian Military Junta"
  KLN_stratocratic_ADJ:0 "Kel Dinnikian"
- KLN_authoritarian_monarchism:0 "Kel Dinnik Confederation"
- KLN_authoritarian_monarchism_DEF:0 "Kel Dinnik Confederation"
+ KLN_authoritarian_monarchism:0 "Denekya Regional Militia"
+ KLN_authoritarian_monarchism_DEF:0 "The Denekya Regional Militia"
  KLN_authoritarian_monarchism_ADJ:0 "Kel Dinnikian"
  KLN_republican_fascism:0 "Greater Kel Dinnikian State"
  KLN_republican_fascism_DEF:0 "Greater Kel Dinnikian State"
@@ -36667,17 +36667,17 @@
  AQ1_DEF:0 "Nusrat al-Islam"
  AQ1_theocratic:0 "Support Group for Islam and Muslims"
  AQ1_theocratic_DEF:0 "The Support Group for Islam and Muslims"
- AQ1_stratocratic:0 "Al-Qaeda in the Islamic Maghreb"
- AQ1_stratocratic_DEF:0 "Al-Qaeda in the Islamic Maghreb"
+ AQ1_stratocratic:0 "Soubala Army of Freedom and Resistance"
+ AQ1_stratocratic_DEF:0 "The Soubala Army of Freedom and Resistance"
  AQ1_anarchism_ideology:0 "Temne Tribes"
  AQ1_anarchism_ideology_DEF:0 "The Temne Tribes"
  AQ1_monarchism:0 "Kingdom of Koya"
  AQ1_monarchism_DEF:0 "The Kingdom of Koya"
  AQ1_ADJ:0 "Malian"
 
- IS1:0 "Islamic State in the Greater Sahara"
- IS1_DEF:0 "The Islamic State in the Greater Sahara"
- IS1_ADJ:0 "Islamic"
+ IS1:0 "Agachey-Numinka Union Forces"
+ IS1_DEF:0 "The Agachey-Numinka Union Forces"
+ IS1_ADJ:0 "Agachey-Numinka"
 
  IS2:0 "Islamic State in Somalia"
  IS2_DEF:0 "The Islamic State in Somalia"
@@ -36702,11 +36702,11 @@
  YM2_DEF:0 "The Southern Transitional Council"
  YM2_ADJ:0 "South Yemeni"
 
- IS3:0 "Islamic State - West Africa Province"
- IS3_DEF:0 "The West Africa Province of the Islamic State"
+ IS3:0 "Followers of the Oracle of Nougoua"
+ IS3_DEF:0 "The Followers of the Oracle of Nougoua"
  IS3_democratic_monarchism:0 "Sultanate of Damagaram"
  IS3_democratic_monarchism_DEF:0 "The Sultanate of Damagaram"
- IS3_ADJ:0 "Islamic"
+ IS3_ADJ:0 "Nougouan"
 
  AQ3:0 "Boko Haram"
  AQ3_DEF:0 "Boko Haram"
@@ -40431,21 +40431,21 @@
  CM0_DEF:0 "The Biafra Nations League"
  CM0_ADJ:0 "Biafran"
 
- CM1:0 "Ambazonia Defence Forces"
- CM1_DEF:0 "The Ambazonia Defence Forces"
- CM1_ADJ:0 "Ambazonian"
+ CM1:0 "Militant Liberators of Guinea"
+ CM1_DEF:0 "The Militant Liberators of Guinea"
+ CM1_ADJ:0 "Guinean"
 
  CM2:0 "Southern Cameroons Defence Forces"
  CM2_DEF:0 "The Southern Cameroons Defence Forces"
  CM2_ADJ:0 "Ambazonian"
 
- CM3:0 "Team Retina"
- CM3_DEF:0 "Team Retina"
- CM3_ADJ:0 "Ambazonian"
+ CM3:0 "Unitary Freedom Front of Guinea"
+ CM3_DEF:0 "The Unitary Freedom Front of Guinea"
+ CM3_ADJ:0 "Guinean"
 
- CM4:0 "Tigers of Ambazonia"
- CM4_DEF:0 "The Tigers of Ambazonia"
- CM4_ADJ:0 "Ambazonian"
+ CM4:0 "Freedom Fighters of Timusin Gombudaro - North"
+ CM4_DEF:0 "The Freedom Fighters of Timusin Gombudaro - North"
+ CM4_ADJ:0 "Freedom Fighters"
 
  CM5:0 "Ambazonia Restoration Forces"
  CM5_DEF:0 "The Ambazonia Restoration Forces"
