--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -374,8 +374,8 @@
  SD0_DEF:0 "The Sahara Desert"
  SD0_democratic_monarchism:0 "Moorish Tribes"
  SD0_democratic_monarchism_DEF:0 "The Moorish Tribes"
- SD0_authoritarian_monarchism:0 "British Colony of the Sahara"
- SD0_authoritarian_monarchism_DEF:0 "British Colony of the Sahara"
+ SD0_authoritarian_monarchism:0 "Molani Revolutionary Guard"
+ SD0_authoritarian_monarchism_DEF:0 "The Molani Revolutionary Guard"
  SD0_stratocratic_monarchism:0 "German Colony of North Africa"
  SD0_stratocratic_monarchism_DEF:0 "The German Colony of North Africa"
  SD0_stratocratic:0 "French Colony of North Africa"
@@ -6736,9 +6736,9 @@
  GNH_stratocratic:0 "Northern Ghana Military Junta"
  GNH_stratocratic_DEF:0 "Northern Ghana Military Junta"
  GNH_stratocratic_ADJ:0 "Northern Ghana"
- GNH_authoritarian_monarchism:0 "Northern Territories of the Gold Coast"
- GNH_authoritarian_monarchism_DEF:0 "The Northern Territories of the Gold Coast"
- GNH_authoritarian_monarchism_ADJ:0 "Northern Ghana"
+ GNH_authoritarian_monarchism:0 "Oudienne Liberation Army"
+ GNH_authoritarian_monarchism_DEF:0 "The Oudienne Liberation Army"
+ GNH_authoritarian_monarchism_ADJ:0 "Oudienne"
  GNH_republican_fascism:0 "Northern Ghana State"
  GNH_republican_fascism_DEF:0 "Northern Ghana State"
  GNH_republican_fascism_ADJ:0 "Northern Ghana"
@@ -15273,9 +15273,9 @@
  ARO_stratocratic:0 "Aro Military Junta"
  ARO_stratocratic_DEF:0 "Aro Military Junta"
  ARO_stratocratic_ADJ:0 "Aro"
- ARO_authoritarian_monarchism:0 "Kingdom of Aro"
- ARO_authoritarian_monarchism_DEF:0 "Kingdom of Aro"
- ARO_authoritarian_monarchism_ADJ:0 "Aro"
+ ARO_authoritarian_monarchism:0 "Diabaly Liberation Front"
+ ARO_authoritarian_monarchism_DEF:0 "The Diabaly Liberation Front"
+ ARO_authoritarian_monarchism_ADJ:0 "Diabaly"
  ARO_republican_fascism:0 "Aro State"
  ARO_republican_fascism_DEF:0 "Aro State"
  ARO_republican_fascism_ADJ:0 "Aro"
@@ -15407,8 +15407,8 @@
  TRZ_stratocratic:0 "Trarzan Military Junta"
  TRZ_stratocratic_DEF:0 "Trarzan Military Junta"
  TRZ_stratocratic_ADJ:0 "Trarzan"
- TRZ_authoritarian_monarchism:0 "Emirate of Trarza"
- TRZ_authoritarian_monarchism_DEF:0 "The Emirate of Trarza"
+ TRZ_authoritarian_monarchism:0 "People's Liberation Army of Trarza"
+ TRZ_authoritarian_monarchism_DEF:0 "The People's Liberation Army of Trarza"
  TRZ_authoritarian_monarchism_ADJ:0 "Trarzan"
  TRZ_republican_fascism:0 "Trarzan State"
  TRZ_republican_fascism_DEF:0 "Trarzan State"
@@ -15474,8 +15474,8 @@
  ARR_stratocratic:0 "Adrari Military Junta"
  ARR_stratocratic_DEF:0 "Adrari Military Junta"
  ARR_stratocratic_ADJ:0 "Adrari"
- ARR_authoritarian_monarchism:0 "Emirate of Adrar"
- ARR_authoritarian_monarchism_DEF:0 "The Emirate of Adrar"
+ ARR_authoritarian_monarchism:0 "Revolutionary Army of Adrar"
+ ARR_authoritarian_monarchism_DEF:0 "The Revolutionary Army of Adrar"
  ARR_authoritarian_monarchism_ADJ:0 "Adrari"
  ARR_republican_fascism:0 "Adrari State"
  ARR_republican_fascism_DEF:0 "Adrari State"
@@ -15608,9 +15608,9 @@
  KNN_stratocratic:0 "Konni Military Junta"
  KNN_stratocratic_DEF:0 "Konni Military Junta"
  KNN_stratocratic_ADJ:0 "Konni"
- KNN_authoritarian_monarchism:0 "Kingdom of Konni"
- KNN_authoritarian_monarchism_DEF:0 "Kingdom of Konni"
- KNN_authoritarian_monarchism_ADJ:0 "Konni"
+ KNN_authoritarian_monarchism:0 "Tera-Imel Unity Front"
+ KNN_authoritarian_monarchism_DEF:0 "The Tera-Imel Unity Front"
+ KNN_authoritarian_monarchism_ADJ:0 "Tera-Imel"
  KNN_republican_fascism:0 "Konni State"
  KNN_republican_fascism_DEF:0 "Konni State"
  KNN_republican_fascism_ADJ:0 "Konni"
@@ -15675,9 +15675,9 @@
  GBR_stratocratic:0 "Gobiri Military Junta"
  GBR_stratocratic_DEF:0 "Gobiri Military Junta"
  GBR_stratocratic_ADJ:0 "Gobiri"
- GBR_authoritarian_monarchism:0 "Kingdom of Gobir"
- GBR_authoritarian_monarchism_DEF:0 "Kingdom of Gobir"
- GBR_authoritarian_monarchism_ADJ:0 "Gobiri"
+ GBR_authoritarian_monarchism:0 "Kukeea Liberators"
+ GBR_authoritarian_monarchism_DEF:0 "The Kukeea Liberators"
+ GBR_authoritarian_monarchism_ADJ:0 "Kukeean"
  GBR_republican_fascism:0 "Gobiri State"
  GBR_republican_fascism_DEF:0 "Gobiri State"
  GBR_republican_fascism_ADJ:0 "Gobiri"
@@ -16412,9 +16412,9 @@
  ABJ_stratocratic:0 "Abujan Military Junta"
  ABJ_stratocratic_DEF:0 "Abujan Military Junta"
  ABJ_stratocratic_ADJ:0 "Abujan"
- ABJ_authoritarian_monarchism:0 "Kingdom of Abuja"
- ABJ_authoritarian_monarchism_DEF:0 "Kingdom of Abuja"
- ABJ_authoritarian_monarchism_ADJ:0 "Abujan"
+ ABJ_authoritarian_monarchism:0 "Tonka Resistance Front"
+ ABJ_authoritarian_monarchism_DEF:0 "The Tonka Resistance Front"
+ ABJ_authoritarian_monarchism_ADJ:0 "Tonka"
  ABJ_republican_fascism:0 "Abujan State"
  ABJ_republican_fascism_DEF:0 "Abujan State"
  ABJ_republican_fascism_ADJ:0 "Abujan"
@@ -16479,9 +16479,9 @@
  KDG_stratocratic:0 "Kennedougou Military Junta"
  KDG_stratocratic_DEF:0 "Kennedougou Military Junta"
  KDG_stratocratic_ADJ:0 "Kennedougou"
- KDG_authoritarian_monarchism:0 "Kingdom of Kennedougou"
- KDG_authoritarian_monarchism_DEF:0 "Kingdom of Kennedougou"
- KDG_authoritarian_monarchism_ADJ:0 "Kennedougou"
+ KDG_authoritarian_monarchism:0 "Burkinabe National Resistance Front"
+ KDG_authoritarian_monarchism_DEF:0 "The Burkinabe National Resistance Front"
+ KDG_authoritarian_monarchism_ADJ:0 "Burkinabe"
  KDG_republican_fascism:0 "Kennedougou State"
  KDG_republican_fascism_DEF:0 "Kennedougou State"
  KDG_republican_fascism_ADJ:0 "Kennedougou"
@@ -16747,9 +16747,9 @@
  BRK_stratocratic:0 "Braknan Military Junta"
  BRK_stratocratic_DEF:0 "Braknan Military Junta"
  BRK_stratocratic_ADJ:0 "Braknan"
- BRK_authoritarian_monarchism:0 "Emirate of Brakna"
- BRK_authoritarian_monarchism_DEF:0 "the Emirate of Brakna"
- BRK_authoritarian_monarchism_ADJ:0 "Braknan"
+ BRK_authoritarian_monarchism:0 "Liberation Front of Aleg"
+ BRK_authoritarian_monarchism_DEF:0 "The Liberation Front of Aleg"
+ BRK_authoritarian_monarchism_ADJ:0 "Alegi"
  BRK_republican_fascism:0 "Braknan State"
  BRK_republican_fascism_DEF:0 "Braknan State"
  BRK_republican_fascism_ADJ:0 "Braknan"
@@ -17484,9 +17484,9 @@
  ILO_stratocratic:0 "Illo Military Junta"
  ILO_stratocratic_DEF:0 "Illo Military Junta"
  ILO_stratocratic_ADJ:0 "Illo"
- ILO_authoritarian_monarchism:0 "Kingdom of Illo"
- ILO_authoritarian_monarchism_DEF:0 "Kingdom of Illo"
- ILO_authoritarian_monarchism_ADJ:0 "Illo"
+ ILO_authoritarian_monarchism:0 "Arlenki Resistance Axis"
+ ILO_authoritarian_monarchism_DEF:0 "The Arlenki Resistance Axis"
+ ILO_authoritarian_monarchism_ADJ:0 "Arlenki"
  ILO_republican_fascism:0 "Illo State"
  ILO_republican_fascism_DEF:0 "Illo State"
  ILO_republican_fascism_ADJ:0 "Illo"
@@ -17618,9 +17618,9 @@
  DBO_stratocratic:0 "Dagbon Military Junta"
  DBO_stratocratic_DEF:0 "Dagbon Military Junta"
  DBO_stratocratic_ADJ:0 "Dagbon"
- DBO_authoritarian_monarchism:0 "Kingdom of Dagbon"
- DBO_authoritarian_monarchism_DEF:0 "Kingdom of Dagbon"
- DBO_authoritarian_monarchism_ADJ:0 "Dagbon"
+ DBO_authoritarian_monarchism:0 "People's Liberation Front of Kansan"
+ DBO_authoritarian_monarchism_DEF:0 "The People's Liberation Front of Kansan"
+ DBO_authoritarian_monarchism_ADJ:0 "Kansani"
  DBO_republican_fascism:0 "Dagbon State"
  DBO_republican_fascism_DEF:0 "Dagbon State"
  DBO_republican_fascism_ADJ:0 "Dagbon"
@@ -17685,9 +17685,9 @@
  ILR_stratocratic:0 "Ilorin Military Junta"
  ILR_stratocratic_DEF:0 "Ilorin Military Junta"
  ILR_stratocratic_ADJ:0 "Ilorin"
- ILR_authoritarian_monarchism:0 "Kingdom of Ilorin"
- ILR_authoritarian_monarchism_DEF:0 "Kingdom of Ilorin"
- ILR_authoritarian_monarchism_ADJ:0 "Ilorin"
+ ILR_authoritarian_monarchism:0 "Taninbuka Defence Army"
+ ILR_authoritarian_monarchism_DEF:0 "The Taninbuka Defence Army"
+ ILR_authoritarian_monarchism_ADJ:0 "Taninbuka"
  ILR_republican_fascism:0 "Ilorin State"
  ILR_republican_fascism_DEF:0 "Ilorin State"
  ILR_republican_fascism_ADJ:0 "Ilorin"
@@ -18623,9 +18623,9 @@
  GWK_stratocratic:0 "Gwiriko Military Junta"
  GWK_stratocratic_DEF:0 "Gwiriko Military Junta"
  GWK_stratocratic_ADJ:0 "Gwiriko"
- GWK_authoritarian_monarchism:0 "Kingdom of Gwiriko"
- GWK_authoritarian_monarchism_DEF:0 "Kingdom of Gwiriko"
- GWK_authoritarian_monarchism_ADJ:0 "Gwiriko"
+ GWK_authoritarian_monarchism:0 "Sakasso Salvation Army"
+ GWK_authoritarian_monarchism_DEF:0 "Sakasso Salvation Army"
+ GWK_authoritarian_monarchism_ADJ:0 "Sakassi"
  GWK_republican_fascism:0 "Gwiriko State"
  GWK_republican_fascism_DEF:0 "Gwiriko State"
  GWK_republican_fascism_ADJ:0 "Gwiriko"
