--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -6905,8 +6905,8 @@
  MLI_national_socialism_ADJ:0 "Malisch"
  MLI_socialism_ideology:0 "Republic of Mali"
  MLI_socialism_ideology_DEF:0 "The Republic of Mali"
- MLI_authoritarian_monarchism:0 "Colony of Mali"
- MLI_authoritarian_monarchism_DEF:0 "The Colony of Mali"
+ MLI_authoritarian_monarchism:0 "National Restoration Government of Mali"
+ MLI_authoritarian_monarchism_DEF:0 "The National Restoration Government of Mali"
  MLI_democratic_monarchism:0 "Caliphate of Hamdullahi"
  MLI_democratic_monarchism_DEF:0 "The Caliphate of Hamdullahi"
  MLI_ADJ:0 "Malian"
@@ -7438,8 +7438,8 @@
  CMR_anocratic_monarchism_DEF:0 "The German Holdouts in Africa"
  CMR_neutrality:0 "Territory of Cameroun"
  CMR_neutrality_DEF:0 "The Territory of Cameroun"
- CMR_authoritarian_monarchism:0 "Colony of Cameroon"
- CMR_authoritarian_monarchism_DEF:0 "The Colony of Cameroon"
+ CMR_authoritarian_monarchism:0 "Liberation Army of Northern Ghana"
+ CMR_authoritarian_monarchism_DEF:0 "The Liberation Army of Northern Ghana"
  CMR_stratocratic_monarchism:0 "Colony of German Cameroon"
  CMR_stratocratic_monarchism_DEF:0 "The Colony of German Cameroon"
  CMR_stratocratic_monarchism_ADJ:0 "Kamerunisch"
@@ -11347,8 +11347,8 @@
  NGA_liberal_republic_DEF:0 "The Republic of Nigeria"
  NGA_stratocratic_monarchism:0 "Colony of German Nigeria"
  NGA_stratocratic_monarchism_DEF:0 "The Colony of German Nigeria"
- NGA_authoritarian_monarchism:0 "Colony and Protectorate of Nigeria"
- NGA_authoritarian_monarchism_DEF:0 "The Colony and Protectorate of Nigeria"
+ NGA_authoritarian_monarchism:0 "National Restoration Government of the Upper Volta"
+ NGA_authoritarian_monarchism_DEF:0 "The National Restoration Government of the Upper Volta"
  NGA_left_anarchism:0 "Hausa Free Territories"
  NGA_left_anarchism_DEF:0 "The Hausa Free Territories"
  NGA_national_socialism:0 "Reichskolonie Nigeria"
@@ -12361,8 +12361,8 @@
  DAH_democratic_DEF:0 "The Republic of Benin"
  DAH_neutrality:0 "Territory of Dahomey"
  DAH_neutrality_DEF:0 "The Territory of Dahomey"
- DAH_authoritarian_monarchism:0 "Colony of Dahomey"
- DAH_authoritarian_monarchism_DEF:0 "The Colony of Dahomey"
+ DAH_authoritarian_monarchism:0 "Resistance Army of Massigui"
+ DAH_authoritarian_monarchism_DEF:0 "The Resistance Army of Massigui"
  DAH_communism:0 "Democratic People's Republic of Dahomey"
  DAH_communism_DEF:0 "The Democratic People's Republic of Dahomey"
  DAH_centrist_republic:0 "Republic of Benin"
@@ -12401,9 +12401,9 @@
  VOL_fascism_DEF:0 "The New Upper Voltan Empire"
  VOL_democratic:0 "Republic of Burkina Faso"
  VOL_democratic_DEF:0 "The Republic of Burkina Faso"
- VOL_stratocratic:0 "Republic of Burkina Faso"
- VOL_stratocratic_DEF:0 "The Republic of Burkina Faso"
- VOL_stratocratic_ADJ:0 "Burkinabè"
+ VOL_stratocratic:0 "Committee on the Restoration of Upper Volta"
+ VOL_stratocratic_DEF:0 "The Committee on the Restoration of Upper Volta"
+ VOL_stratocratic_ADJ:0 "Upper Voltese"
  VOL_neutrality:0 "Territory of the Upper Volta"
  VOL_neutrality_DEF:0 "The Territory of the Upper Volta"
  VOL_communism:0 "Socialist Republic of the Upper Volta"
@@ -12454,8 +12454,8 @@
  IVO_national_socialism:0 "Reichskolonie Elfenbeinküste"
  IVO_national_socialism_DEF:0 "das Reichskolonie Elfenbeinküste"
  IVO_national_socialism_ADJ:0 "Elfenbeinküstisch"
- IVO_authoritarian_monarchism:0 "Ivory Coast Protectorate"
- IVO_authoritarian_monarchism_DEF:0 "The Ivory Coast Protectorate"
+ IVO_authoritarian_monarchism:0 "Iron Claw Army"
+ IVO_authoritarian_monarchism_DEF:0 "The Iron Claw Army"
  IVO_stratocratic_monarchism:0 "Colony of German Ivory Coast"
  IVO_stratocratic_monarchism_DEF:0 "The Colony of German Ivory Coast"
  IVO_ADJ:0 "Ivorian"
@@ -12724,8 +12724,8 @@
  TOG_stratocratic_DEF:0 "The Provisional State of Togo"
  TOG_stratocratic_monarchism:0 "Protectorate of German Togoland"
  TOG_stratocratic_monarchism_DEF:0 "The Protectorate of German Togoland"
- TOG_authoritarian_monarchism:0 "Togoland Protectorate"
- TOG_authoritarian_monarchism_DEF:0 "The Togoland Protectorate"
+ TOG_authoritarian_monarchism:0 "Segou Liberation Army"
+ TOG_authoritarian_monarchism_DEF:0 "The Segou Liberation Army"
  TOG_national_socialism:0 "Reichsprotektorat Togo"
  TOG_national_socialism_DEF:0 "das Reichsprotektorat Togo"
  TOG_centrist_republic:0 "Czechoslovak Mandate of Togo"
@@ -12921,9 +12921,9 @@
  NCM_democratic_monarchism:0 "Wukari Federation"
  NCM_democratic_monarchism_DEF:0 "The Wukari Federation"
  NCM_democratic_monarchism_ADJ:0 "Wukari"
- NCM_authoritarian_monarchism:0 "Mandate of North Cameroons"
- NCM_authoritarian_monarchism_DEF:0 "The Mandate of North Cameroons"
- NCM_authoritarian_monarchism_ADJ:0 "British-Cameroonian"
+ NCM_authoritarian_monarchism:0 "Tenenkou Salvation Army"
+ NCM_authoritarian_monarchism_DEF:0 "The Tenenkou Salvation Army"
+ NCM_authoritarian_monarchism_ADJ:0 "Tenenkou"
  
  SCM_anarchism_ideology:0 "Bamileke Tribes"
  SCM_anarchism_ideology_DEF:0 "The Bamileke Tribes"
@@ -12939,9 +12939,9 @@
  SCM_neutrality:0 "Federal Republic of Ambazonia"
  SCM_neutrality_DEF:0 "The Federal Republic of Ambazonia"
  SCM_neutrality_ADJ:0 "Ambazonian"
- SCM_authoritarian_monarchism:0 "Mandate of South Cameroons"
- SCM_authoritarian_monarchism_DEF:0 "The Mandate of South Cameroons"
- SCM_authoritarian_monarchism_ADJ:0 "British-Cameroonian"
+ SCM_authoritarian_monarchism:0 "Freedom Fighters of Timusin Gombudaro - South"
+ SCM_authoritarian_monarchism_DEF:0 "Freedom Fighters of Timusin Gombudaro - South"
+ SCM_authoritarian_monarchism_ADJ:0 "Freedom Fighters"
  SCM_monarchism:0 "Kingdom of South Cameroon"
  SCM_monarchism_DEF:0 "The Kingdom of South Cameroon"
  SCM_monarchism_ADJ:0 "South Cameroonian"
@@ -13061,8 +13061,8 @@
  WTO_stratocratic_DEF:0 "The Provisional State of Togo"
  WTO_stratocratic_monarchism:0 "Protectorate of German Togoland"
  WTO_stratocratic_monarchism_DEF:0 "The Protectorate of German Togoland"
- WTO_authoritarian_monarchism:0 "Mandate Territory of Togoland"
- WTO_authoritarian_monarchism_DEF:0 "The Mandate Territory of Togoland"
+ WTO_authoritarian_monarchism:0 "Sentinels of Nzerekore"
+ WTO_authoritarian_monarchism_DEF:0 "The Sentinels of Nzerekore"
  WTO_national_socialism:0 "Reichsprotektorat Togoland"
  WTO_national_socialism_DEF:0 "das Reichsprotektorat Togoland"
  WTO_centrist_republic:0 "Czechoslovak Mandate of Togo"
@@ -27791,9 +27791,9 @@
  NGC_fascism:0 "Niger Coast Colony"
  NGC_fascism_DEF:0 "The Niger Coast Colony"
  NGC_fascism_ADJ:0 "Coastal Nigerian"
- NGC_neutrality:0 "Niger Coast Colony"
- NGC_neutrality_DEF:0 "The Niger Coast Colony"
- NGC_neutrality_ADJ:0 "Coastal Nigerian"
+ NGC_neutrality:0 "Black Army of Sadiola"
+ NGC_neutrality_DEF:0 "The Black Army of Sadiola"
+ NGC_neutrality_ADJ:0 "Sadiolese"
  NGC_democratic_monarchism:0 "Kingdom of Benin"
  NGC_democratic_monarchism_DEF:0 "The Kingdom of Benin"
  NGC_democratic_monarchism_ADJ:0 "Beninese"
@@ -27807,9 +27807,9 @@
  ORV_democratic:0 "Republic of Oil Rivers"
  ORV_democratic_DEF:0 "The Republic of Oil Rivers"
  ORV_democratic_ADJ:0 "Oil Rivers"
- ORV_authoritarian_monarchism:0 "Oil Rivers Protectorate"
- ORV_authoritarian_monarchism_DEF:0 "The Oil Rivers Protectorate"
- ORV_authoritarian_monarchism_ADJ:0 "Oil Rivers"
+ ORV_authoritarian_monarchism:0 "Kayes Restoration Front"
+ ORV_authoritarian_monarchism_DEF:0 "The Kayes Restoration Front"
+ ORV_authoritarian_monarchism_ADJ:0 "Kayesi"
  ORV_stratocratic_monarchism:0 "German Colony of the Oil Rivers"
  ORV_stratocratic_monarchism_DEF:0 "The German Colony of the Oil Rivers"
  ORV_stratocratic_monarchism_ADJ:0 "German"
@@ -27870,9 +27870,9 @@
  NNI_anocratic_republic:0 "Free Nigerian Republic"
  NNI_anocratic_republic_DEF:0 "The Free Nigerian Republic"
  NNI_anocratic_republic_ADJ:0 "Nigerian"
- NNI_neutrality:0 "Protectorate of Northern Nigeria"
- NNI_neutrality_DEF:0 "The Protectorate of Northern Nigeria"
- NNI_neutrality_ADJ:0 "Northern Nigerian"
+ NNI_neutrality:0 "Adjur Regional Defence Force"
+ NNI_neutrality_DEF:0 "The Adjur Regional Defence Force"
+ NNI_neutrality_ADJ:0 "Adjuri"
  NNI_monarchism:0 "Sokoto Caliphate"
  NNI_monarchism_DEF:0 "The Sokoto Caliphate"
  NNI_monarchism_ADJ:0 "Fulani"
@@ -27917,8 +27917,8 @@
  BOR_neutrality:0 "Bornu"
  BOR_neutrality_DEF:0 "The Bornu"
  BOR_neutrality_ADJ:0 "Bornuan"
- BOR_authoritarian_monarchism:0 "Bornu Emirate"
- BOR_authoritarian_monarchism_DEF:0 "The Bornu Emirate"
+ BOR_authoritarian_monarchism:0 "Restoration Government of the Nation of Ghana"
+ BOR_authoritarian_monarchism_DEF:0 "The Restoration Government of the Nation of Ghana"
  BOR_monarchism:0 "Bornu Empire"
  BOR_monarchism_DEF:0 "The Bornu Empire"
  BOR_monarchism_ADJ:0 "Bornuan"
@@ -27935,9 +27935,9 @@
  SOK_neutrality:0 "Sokoto"
  SOK_neutrality_DEF:0 "The Sokoto"
  SOK_neutrality_ADJ:0 "Sokotan"
- SOK_stratocratic:0 "State of Hausaland"
- SOK_stratocratic_DEF:0 "State of Hausaland"
- SOK_stratocratic_ADJ:0 "Hausa"
+ SOK_stratocratic:0 "Mopti Revolutionary Guard"
+ SOK_stratocratic_DEF:0 "The Mopti Revolutionary Guard"
+ SOK_stratocratic_ADJ:0 "Mopti"
  SOK_monarchism:0 "Sultanate of Sokoto"
  SOK_monarchism_DEF:0 "The Sultanate of Sokoto"
  SOK_monarchism_ADJ:0 "Sokotan"
